<?xml version="1.0" encoding="utf-8"?><!--
/**
 * Copyright (C) 2016  Sandeep Fatangare <sandeep@fatangare.info>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">
    <!-- Logcat log view -->
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menuOptionsLayout"
        android:background="@android:color/background_dark"
        android:divider="@android:color/holo_green_dark"
        android:dividerHeight="1dp"
        android:fastScrollAlwaysVisible="true"
        android:fastScrollEnabled="true"
        android:scrollbarSize="1dp" />

    <!-- Menu option specific views -->
    <LinearLayout
        android:id="@+id/menuOptionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottombar"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="4dp"
        android:visibility="gone">

        <!-- 'Saved logs' view -->
        <ListView
            android:id="@+id/recordList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/holo_green_dark"
            android:dividerHeight="0.5dp"
            android:visibility="gone" />

        <!-- 'Set Filter' view -->
        <LinearLayout
            android:id="@+id/filterLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3"
                android:background="@android:color/holo_green_dark"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/logfilter_lable"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etLogFilter"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".4"
                android:focusable="true"
                android:maxLines="1"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnLogFilter"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3"
                android:background="@android:color/holo_green_dark"
                android:text="@string/logfilter_button"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Priority Levels view -->
        <RadioGroup
            android:id="@+id/rgPriorityLevels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/radioVerbose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="3dp"
                android:text="@string/priority_verbose"
                android:textColor="@android:color/holo_green_dark" />

            <RadioButton
                android:id="@+id/radioDebug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/priority_debug"
                android:textColor="@android:color/holo_green_dark" />

            <RadioButton
                android:id="@+id/radioInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/priority_info"
                android:textColor="@android:color/holo_green_dark" />

            <RadioButton
                android:id="@+id/radioWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/priority_warning"
                android:textColor="@android:color/holo_green_dark" />

            <RadioButton
                android:id="@+id/radioError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/priority_error"
                android:textColor="@android:color/holo_green_dark" />
        </RadioGroup>


    </LinearLayout>
    <!-- Bottom bar -->
    <RelativeLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/darker_gray">

        <!-- Bottom bar for standard view -->
        <LinearLayout
            android:id="@+id/normalbottombar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:id="@+id/find"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_search" />

            <ImageView
                android:id="@+id/btnPriorityLevel"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_filter_levels" />

            <ImageView
                android:id="@+id/btnReset"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_reset" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
